fix color palette z-index

--- a/resources/styles/partials/color-palette.scss
+++ b/resources/styles/partials/color-palette.scss
@@ -16,7 +16,7 @@
   padding: 1rem;
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 11;
   .right-arrow,
   .left-arrow {
     cursor: pointer;
